--- a/index.html
+++ b/index.html
@@ -50,15 +50,16 @@ color:white;
 
 <a href="oil.html">
 <div class="box">
-⛽ حصة البنزين
+⛽ 2026 حصة البنزين
 </div>
 </a>
 
 <a href="ramadan.html">
 <div class="box">
-🌙 إمساكية رمضان
+🌙 2026 إمساكية رمضان
 </div>
 </a>
 
 </body>
 </html>
+
