--- a/index.html
+++ b/index.html
@@ -59,7 +59,14 @@ color:white;
 🌙 2026 إمساكية رمضان
 </div>
 </a>
+<a href="Days.html">
+<div class="box">
+الأيام العالمية
+</div>
+</a>
 
+  
 </body>
 </html>
+
 
