--- a/Days.html
+++ b/Days.html
@@ -72,93 +72,13 @@
     </div>
     <div class="content">
         <div class="today">
-            <p>اليوم هو: <span id="current-date"></span></p>
+            <p>اليوم هو: <span id="current-day"></span>, <span id="current-date"></span></p>
             <p id="event-info"></p>
         </div>
     </div>
 
-    <div class="events-list">
-        <!-- قائمة الأيام العالمية -->
-        <div class="event-item">
-            <h3>اليوم العالمي للسلام</h3>
-            <p>يحتفل به في: 1 يناير</p>
-            <p>يهدف إلى تعزيز ثقافة السلام في العالم.</p>
-        </div>
-        <div class="event-item">
-            <h3>اليوم العالمي لمكافحة مرض الإيدز</h3>
-            <p>يحتفل به في: 1 يناير</p>
-            <p>يهدف لرفع الوعي حول مرض الإيدز وطرق الوقاية منه.</p>
-        </div>
-        <div class="event-item">
-            <h3>اليوم العالمي للتعليم</h3>
-            <p>يحتفل به في: 24 يناير</p>
-            <p>يركز على أهمية التعليم في التنمية البشرية.</p>
-        </div>
-        <div class="event-item">
-            <h3>اليوم الدولي للغة الأم</h3>
-            <p>يحتفل به في: 21 فبراير</p>
-            <p>يهدف إلى تعزيز التنوع الثقافي وحماية اللغات المحلية.</p>
-        </div>
-        <div class="event-item">
-            <h3>اليوم العالمي لسرطان الأطفال</h3>
-            <p>يحتفل به في: 15 فبراير</p>
-            <p>يزيد الوعي حول مرض السرطان عند الأطفال وأهمية الوقاية.</p>
-        </div>
-        <div class="event-item">
-            <h3>اليوم العالمي لسرطان الثدي</h3>
-            <p>يحتفل به في: 4 فبراير</p>
-            <p>يركز على التوعية بسرطان الثدي وطرق الكشف المبكر.</p>
-        </div>
-        <div class="event-item">
-            <h3>اليوم العالمي للعدالة الاجتماعية</h3>
-            <p>يحتفل به في: 20 فبراير</p>
-            <p>يهدف إلى تعزيز العدالة الاجتماعية والاقتصادية على مستوى العالم.</p>
-        </div>
-        <div class="event-item">
-            <h3>اليوم العالمي للحيوانات</h3>
-            <p>يحتفل به في: 17 فبراير</p>
-            <p>يركز على حماية حقوق الحيوانات والتوعية حول رفاهيتها.</p>
-        </div>
-        <div class="event-item">
-            <h3>اليوم العالمي للمرأة</h3>
-            <p>يحتفل به في: 8 مارس</p>
-            <p>يحتفل بحقوق المرأة ومساهماتها في المجتمع.</p>
-        </div>
-        <div class="event-item">
-            <h3>اليوم العالمي لحقوق الإنسان</h3>
-            <p>يحتفل به في: 10 مارس</p>
-            <p>يركز على نشر ثقافة حقوق الإنسان وحمايتها.</p>
-        </div>
-        <div class="event-item">
-            <h3>اليوم العالمي للتوحد</h3>
-            <p>يحتفل به في: 2 أبريل</p>
-            <p>يزيد الوعي حول مرض التوحد ودعم الأفراد المصابين به.</p>
-        </div>
-        <div class="event-item">
-            <h3>اليوم العالمي للغة الأم</h3>
-            <p>يحتفل به في: 21 مارس</p>
-            <p>يهدف إلى تعزيز الوعي باللغات الأصلية وحمايتها.</p>
-        </div>
-        <div class="event-item upcoming-event">
-            <h3>عيد نوروز</h3>
-            <p>يحتفل به في: 21 مارس</p>
-            <p>يحتفل ببداية الربيع وبداية السنة الفارسية الجديدة.</p>
-        </div>
-        <div class="event-item upcoming-event">
-            <h3>اليوم العالمي للصحة</h3>
-            <p>يحتفل به في: 7 أبريل</p>
-            <p>يركز على رفع الوعي حول أهمية الصحة العامة.</p>
-        </div>
-        <div class="event-item upcoming-event">
-            <h3>اليوم العالمي للبيئة</h3>
-            <p>يحتفل به في: 22 أبريل</p>
-            <p>يهدف إلى حماية البيئة ورفع الوعي بالقضايا البيئية.</p>
-        </div>
-        <div class="event-item upcoming-event">
-            <h3>عيد العمال</h3>
-            <p>يحتفل به في: 1 مايو</p>
-            <p>يحتفل بإنجازات العمال وحقوقهم في جميع أنحاء العالم.</p>
-        </div>
+    <div class="events-list" id="events-list">
+        <!-- سيتم ملؤها من خلال جافاسكربت -->
     </div>
 
     <script>
@@ -181,5 +101,46 @@
             { date: '2026-05-01', event: 'عيد العمال' }
         ];
 
+        function getDayName(date) {
+            const daysOfWeek = ["الأحد", "الإثنين", "الثلاثاء", "الأربعاء", "الخميس", "الجمعة", "السبت"];
+            const day = date.getDay(); // يحصل على رقم اليوم من 0 إلى 6
+            return daysOfWeek[day];
+        }
+
         function checkEvent() {
-            const today = new Date
+            const today = new Date();
+            const todayDate = today.toISOString().split('T')[0]; // تاريخ اليوم بصيغة YYYY-MM-DD
+            const todayDayName = getDayName(today); // الحصول على اسم اليوم
+            document.getElementById('current-date').textContent = todayDate;
+            document.getElementById('current-day').textContent = todayDayName;
+
+            // تصفية المناسبات القادمة فقط
+            const upcomingEvents = events.filter(event => event.date >= todayDate);
+
+            // إضافة المناسبات القادمة في الصفحة
+            const eventsListContainer = document.getElementById('events-list');
+            eventsListContainer.innerHTML = ''; // تنظيف القائمة قبل إضافة العناصر الجديدة
+
+            if (upcomingEvents.length === 0) {
+                eventsListContainer.innerHTML = '<p>لا توجد مناسبات قادمة.</p>';
+            } else {
+                upcomingEvents.forEach(event => {
+                    const eventElement = document.createElement('div');
+                    eventElement.classList.add('event-item');
+                    if (event.date === '2026-03-21') {
+                        eventElement.classList.add('upcoming-event'); // تمييز يوم عيد نوروز
+                    }
+                    eventElement.innerHTML = `
+                        <h3>${event.event}</h3>
+                        <p>يحتفل به في: ${event.date}</p>
+                        <p>وصف: يمكن تخصيص وصف لكل مناسبة هنا.</p>
+                    `;
+                    eventsListContainer.appendChild(eventElement);
+                });
+            }
+        }
+
+        checkEvent();
+    </script>
+</body>
+</html>
