--- a/index.html
+++ b/index.html
@@ -61,12 +61,13 @@ color:white;
 </a>
 <a href="Days.html">
 <div class="box">
-الأيام العالمية
+🌍✨ الأيام العالمية 🌏💫
 </div>
 </a>
 
   
 </body>
 </html>
+
 
 
